# docs/swagger.yaml
@@ -9,6 +9,25 @@ components:
         name:
           type: string
       type: object
+    main.CheckoutItem:
+      properties:
+        product_id:
+          type: integer
+        quantity:
+          type: integer
+      required:
+      - product_id
+      - quantity
+      type: object
+    main.CheckoutRequest:
+      properties:
+        items:
+          items:
+            $ref: '#/components/schemas/main.CheckoutItem'
+          type: array
+      required:
+      - items
+      type: object
     main.Product:
       properties:
         id:
@@ -18,6 +37,34 @@ components:
         price:
           type: integer
         stock:
+          type: integer
+      type: object
+    main.Transaction:
+      properties:
+        created_at:
+          type: string
+        details:
+          items:
+            $ref: '#/components/schemas/main.TransactionDetail'
+          type: array
+        id:
+          type: integer
+        total_amount:
+          type: integer
+      type: object
+    main.TransactionDetail:
+      properties:
+        id:
+          type: integer
+        product_id:
+          type: integer
+        product_name:
+          type: string
+        quantity:
+          type: integer
+        subtotal:
+          type: integer
+        transaction_id:
           type: integer
       type: object
 externalDocs:
@@ -327,6 +374,49 @@ paths:
       summary: Update product
       tags:
       - Products
+  /api/transactions/checkout:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/main.CheckoutRequest'
+        description: Checkout request with items
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/main.Transaction'
+          description: Created
+        "400":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: Not Found
+        "422":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/json:
+              schema:
+                type: string
+          description: Internal Server Error
+      summary: Checkout transaction
+      tags:
+      - Transactions
   /health:
     get:
       responses:
